--- a/draft.html
+++ b/draft.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="fantasysports.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="draft.js"></script>
 </head>
 <header>
@@ -21,37 +22,43 @@
     </nav>
 </header>
 <main>
-    <form class="pool-names" action="#">
-        <label for="person1">Person 1:</label><br>
-        <input type="text" id="person1" name="person1"><br>
-        <label for="person2">Person 2:</label><br>
-        <input type="text" id="person2" name="person2"><br>
-        <label for="person3">Person 3:</label><br>
-        <input type="text" id="person3" name="person3"><br>
-        <label for="person4">Person 4:</label><br>
-        <input type="text" id="person4" name="person4"><br><br>
-        <input type="submit" value="Submit">
-    </form>
+    <div class="carousel-container">
+        <button class="carousel-btn left"><i class="fa-solid fa-arrow-left"></i></button>
+        <ul class="carousel">
+            <li class="carousel-item">
+                <div class="team-card">
+                <h1>Team Card 1</h1>
+                <ul>
+                    <li>person 1</li>
+                    <li>person 2</li>
+                    <li>person 3</li>
+                </ul>
+            </div>
+        </li>
+            <li class="carousel-item"><div class="team-card">
+                <h1>Team Card 2</h1>
+                <ul>
+                    <li>person 1</li>
+                    <li>person 2</li>
+                    <li>person 3</li>
+                </ul></li>
+            <li class="carousel-item"><div class="team-card">
+                <h1>Team Card 3</h1>
+                <ul>
+                    <li>person 1</li>
+                    <li>person 2</li>
+                    <li>person 3</li>
+                </ul>
+            </li>
+        </ul>
+        <button class="carousel-btn right"><i class="fa-solid fa-arrow-right"></i></button>
+        <div class="carousel-nav">
+            <div class="nav-item"><i class="fa-solid fa-circle-dot"></i></div>
+            <div class="nav-item"><i class="fa-solid fa-circle-dot"></i></div>
+            <div class="nav-item"><i class="fa-solid fa-circle-dot"></i></div>
+        </div>
+    </div>
 
-    <h1>Draft</h1>
-    <table id="draft-table">
-        <thead>
-            <tr>
-                <th>Player</th>
-                <th>picks</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Populate the table -->
-        </tbody>
-    </table>
-    
-    <h1>Draft-Pool</h1>
-    <table id="draft-pool">
-        <tbody>
-            <!-- Populate the table -->
-        </tbody>
-    </table>
     
 </main>
 <footer>
