--- a/draft.html
+++ b/draft.html
@@ -26,7 +26,7 @@
         <button class="carousel-btn left"><i class="fa-solid fa-arrow-left"></i></button>
         <ul class="carousel">
             <li class="carousel-item">
-                <div class="team-card">
+                <div class="team-card active">
                 <h1>Team Card 1</h1>
                 <ul>
                     <li>person 1</li>
