feat: added team card content

--- a/draft.html
+++ b/draft.html
@@ -31,33 +31,51 @@
                 <h1>Team Card 1</h1>
                 <div class="athlete-card">
                     <h3>Roman Khrennikov</h3>
-                    <img src="./images/khrennikov.jpg" alt="">
+                    <img src="./images/khrennikov.jpg" alt="Roman Khrennikov">
                 </div>
                 <div class="athlete-card">
                     <h3>Jayson Hopper</h3>
-                    <img src="./images/hopper.jpg" alt="">
+                    <img src="./images/hopper.jpg" alt="Jayson Hopper">
                 </div>
                 <div class="athlete-card">
                     <h3>Emma Lawson</h3>
-                    <img src="./images/lawson.jpg" alt="">
+                    <img src="./images/lawson.jpg" alt="Emma Lawson">
                 </div>
-                
-            </div>
-        </li>
+                </div>
+            </li>
             <li class="carousel-item"><div class="team-card">
-                <h1>Team Card 2</h1>
-                <ul>
-                    <li>Laura Horvath</li>
-                    <li>Alex Gazan</li>
-                    <li>Paige Powers</li>
-                </ul></li>
+                <div class="team-card">
+                    <h1>Team Card 2</h1>
+                    <div class="athlete-card">
+                        <h3>Pat Vellner</h3>
+                        <img src="./images/pvellner.jpg" alt="Pat vellner">
+                    </div>
+                    <div class="athlete-card">
+                        <h3>Paige Semenza</h3>
+                        <img src="./images/semenza.jpg" alt="Paige Semenza">
+                    </div>
+                    <div class="athlete-card">
+                        <h3>Arielle Loewen</h3>
+                        <img src="./images/loewen.jpg" alt="Arielle Loewen">
+                    </div>
+                </div>
+            </li>
             <li class="carousel-item"><div class="team-card">
-                <h1>Team Card 3</h1>
-                <ul>
-                    <li>person 1</li>
-                    <li>person 2</li>
-                    <li>person 3</li>
-                </ul>
+                <div class="team-card">
+                    <h1>Team Card 3</h1>
+                    <div class="athlete-card">
+                        <h3>Jay Crouch</h3>
+                        <img src="./images/crouch.jpg" alt="Jay Crouch">
+                    </div>
+                    <div class="athlete-card">
+                        <h3>Chandler Smith</h3>
+                        <img src="./images/smith.jpg" alt="Chandler Smith">
+                    </div>
+                    <div class="athlete-card">
+                        <h3>Kyra Milligan</h3>
+                        <img src="./images/milligan.jpg" alt="Kyra Milligan">
+                    </div>
+                    </div>
             </li>
         </ul>
         <button class="carousel-btn right"><i class="fa-solid fa-arrow-right"></i></button>
