feat: added favicon, and error styling

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <head>
     <title>Fantasy Sports League About</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="fantasysports.css" />
   </head>
