--- a/draft.html
+++ b/draft.html
@@ -5,6 +5,7 @@
     <title>Fantasy Sports League</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="fantasysports.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     
@@ -22,6 +23,7 @@
     </nav>
 </header>
 <main>
+    <div class="error hidden"></div>
     <div class="carousel-container">
         <button class="carousel-btn left"><i class="fa-solid fa-arrow-left"></i></button>
         
