--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Fantasy Sports</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="fantasysports.css" />
     <script src="leaderboard.js"></script>
   </head>
