--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="fantasysports.css" />
-    <script src="leaderboard.js"></script>
   </head>
   <header>
     <nav>
@@ -21,6 +20,7 @@
     </nav>
   </header>
   <main>
+    <div class="error hidden"></div>
     <div class="layout">
       <div class="column left-column">
         <img src="./images/vellner.jpg" alt="1" />
@@ -61,6 +61,7 @@
       </div>
     </div>
     <p id="disclaimer">Competition year 2023 shown</p>
+    <script src="leaderboard.js"></script>
   </main>
   <footer>
     <a class="small-text" href="mailto:fantasyLeague@notreal.com"
